--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,18 @@
 /* Copyright 2023 iiPython */
 
 /* Normal styles */
+table {
+    width: 100%;
+}
+tbody {
+    width: 100%;
+    height: 80vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 td {
     padding: 10px;
     position: relative;
